# sciplotting

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TASK_FEATURES.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
core/: annotations_manager.py  data_manager.py  fitting_engine.py  plot_engine.py  project_manager.py  stats_engine.py  template_manager.py  zones_manager.py
gui/: annotations_panel.py  batch_dialog.py  canvas_widget.py  config_panel.py  data_panel.py  data_table_widget.py  figure_tab.py  fitting_panel.py  layout_composer.py  main_window.py  projects_dialog.py  stats_panel.py  transform_dialog.py  zones_panel.py
resources/: SciPlotGUI.icns  generate_icon.py
tests/: __init__.py  test_data_manager.py  test_data_persistence.py  test_plot_engine.py  test_template_manager.py  test_zones_manager.py
