[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciplotgui"
version = "1.0.0"
description = "A GUI application for creating publication-ready scientific figures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SciPlotGUI Contributors"}
]
keywords = [
    "scientific",
    "plotting",
    "visualization",
    "graphpad",
    "prism",
    "matplotlib",
    "statistics",
    "curve-fitting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PyQt6>=6.4.0",
    "matplotlib>=3.6.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "lmfit>=1.1.0",
]

[project.optional-dependencies]
full = [
    "SciencePlots>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pzm539874931/sciplotting"
Documentation = "https://github.com/pzm539874931/sciplotting#readme"
Repository = "https://github.com/pzm539874931/sciplotting"
Issues = "https://github.com/pzm539874931/sciplotting/issues"

[project.scripts]
sciplotgui = "main:main"

[project.gui-scripts]
sciplotgui-gui = "main:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "gui"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
